processing of the program to work with the database